--- a/.. README.md
+++ b/.. README.md
@@ -3,13 +3,13 @@ Daily Journal for FreeCodeCamp Projects
 
 Hello!
 
-I have finally gotten through all of the pre-algorithm exercises in Free Code Camp. Now I will be doing some fun and challenging work, (the algorithm section), and I wanted to create this journal to keep track of all the neat stuff I will be learning.
+I have finally gotten through all of the pre-algorithm exercises in Free Code Camp. Now I will be doing some fun and challenging work, (the algorithm section), and I wanted to create this journal to keep track of all the neat stuff I will be learning. I will also be keeping my notes here along with my code because this is how I learn. 
 
 If you find a bug please open an issue. If you see something that needs to be updated, please open a pull request. 
 
 Dislaimer: This is not to be used as anyone's cheat sheet, it is ALWAYS better to think about your challenge and work through each problem on your own. However, if you do peek, PLEASE THINK, and do not review my work unless you want SPOILERS, thank you.
 
-For each project I will explain it's purpose and then write the code to solve that particular challenge. In many cases I will document alternative solutions. 
+For each project I will explain it's purpose and then write the code to solve that particular challenge. In many cases I will document alternative solutions, question myself, take short notes. 
 
 Please feel free to contact me for any reason, 
 
